--- a/src/container/style.css
+++ b/src/container/style.css
@@ -7,11 +7,15 @@ display: flex;
 justify-content:space-between;
 align-items: center;
 color:white;
- z-index: 100;
+position:fixed ;
+z-index: 100;
 }
 ul li {
     list-style-type: none;
     font-size: 30px;
+    display: block;
+    margin-left: 10px;
+    margin-right: 10px;
  } 
 a{
  text-decoration: none;
